--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Start Bootstrap Theme</title>
+  <title>Agency - Jasper Hajonides Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -222,11 +222,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4>2017-2020</h4>
+                  <h4 class="subheading">PhD at Oxford University</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+					        <p class="text-muted">Supervised by <a href="https://www.psy.ox.ac.uk/team/kia-nobre-1">Prof. Kia Nobre</a> and <a href="https://www.psy.ox.ac.uk/team/mark-stokes-1">Prof. Mark Stokes</a> my doctoral research investigates the role of top-down modulations on visual representations in the brain. </p>
                 </div>
               </div>
             </li>
@@ -236,11 +236,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
+                  <h4>November 2016 - August 2017</h4>
+                  <h4 class="subheading">Visiting research scientist at Princeton University</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">Working with Prof. Sabine Kastner I completed an MRI study investigating perception and attention in visual cortex and pulvinar.</p>
                 </div>
               </div>
             </li>
@@ -250,11 +250,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
+                  <h4>January 2016 - November 2016</h4>
+                  <h4 class="subheading">Visiting research scientist at the Donders Institute</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">At the Donders Institute I worked with Prof. Floris de Lange to decode neural correlates of visual expectations and visual short-term memory using functional MRI with high temporal frequency. </p>
                 </div>
               </div>
             </li>
@@ -264,19 +264,12 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
+                  <h4>September 2014 - August 2015</h4>
+                  <h4 class="subheading">Undergraduate internship at Oxford University</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">In collaboration with Dr. Robert Mok and Prof. Kia Nobre, I worked on a behavioural and eye-tracking study investigating emotional working memory in younger and older adults.</p>
                 </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
               </div>
             </li>
           </ul>
@@ -292,7 +285,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <h2 class="section-heading text-uppercase">Contact</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
