--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Agency - Jasper Hajonides Theme</title>
+  <title>Agency - Jasper Hajonides - Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Jasper Hajonides</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -38,16 +38,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Themes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -236,7 +233,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>November 2016 - August 2017</h4>
+                  <h4>Nov 2016 - Aug 2017</h4>
                   <h4 class="subheading">Visiting research scientist at Princeton University</h4>
                 </div>
                 <div class="timeline-body">
@@ -250,7 +247,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>January 2016 - November 2016</h4>
+                  <h4>Jan 2016 - Nov 2016</h4>
                   <h4 class="subheading">Visiting research scientist at the Donders Institute</h4>
                 </div>
                 <div class="timeline-body">
@@ -264,11 +261,27 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>September 2014 - August 2015</h4>
-                  <h4 class="subheading">Undergraduate internship at Oxford University</h4>
+                  <h4>Sep 2014 - Aug 2015</h4>
+                  <h4> class="subheading">Oxford University</h4>
+                  <p><em> class="subheading">Undergraduate internship </em></p>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">In collaboration with Dr. Robert Mok and Prof. Kia Nobre, I worked on a behavioural and eye-tracking study investigating emotional working memory in younger and older adults.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/5.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Sep 2012 - Aug 2015</h4>
+                  <h4 class="subheading">BSc at University of Amsterdam</h4>
+
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">After finishing high school I pursued a degree in Psychobiology at the University of Amsterdam. This research-oriented programme taught courses on neurobiology, neuropharmacalogy, statistics, cognitive psychology, social cognition, and more. I completed an excellence programme and finished all taught courses in two years and moved to Oxford for an internship during my third year </p>
                 </div>
               </div>
             </li>
