--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Jasper Hajonides</div>
+        <div class="intro-lead-in">Jasper Hajonides van der Meulen</div>
         <div class="intro-heading text-uppercase">Personal Website</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">See More</a>
       </div>
@@ -103,7 +103,7 @@
     </div>
   </section>
 
-  <!-- Portfolio Grid -->
+  <!-- CV themes Grid -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="row">
@@ -248,7 +248,8 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>Jan 2016 - Nov 2016</h4>
-                  <h4 class="subheading">Visiting research scientist at the Donders Institute</h4>
+                  <h4>Donders Institute</h4>
+                  <p><em> Visiting research scientist </em></p>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">At the Donders Institute I worked with Prof. Floris de Lange to decode neural correlates of visual expectations and visual short-term memory using functional MRI with high temporal frequency. </p>
@@ -262,8 +263,8 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>Sep 2014 - Aug 2015</h4>
-                  <h4> class="subheading">Oxford University</h4>
-                  <p><em> class="subheading">Undergraduate internship </em></p>
+                  <h4> Oxford University</h4>
+                  <p><em> Undergraduate internship </em></p>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">In collaboration with Dr. Robert Mok and Prof. Kia Nobre, I worked on a behavioural and eye-tracking study investigating emotional working memory in younger and older adults.</p>
