--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-head-side-brain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Understanding thoughts and actions</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -86,7 +86,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-mind-share fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Rhythms of the brain</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -94,7 +94,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-brain fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Memory decoding</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -123,7 +123,7 @@
             <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Colour perception</h4>
+            <h4>Parametric feature perception</h4>
             <p class="text-muted">Electroencephalography</p>
           </div>
         </div>
@@ -151,8 +151,8 @@
             <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Perceptual manifolds</h4>
+            <p class="text-muted">Review</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -165,8 +165,8 @@
             <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
+            <h4>Emotional Working Memory</h4>
+            <p class="text-muted">Behavioural study</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -179,8 +179,8 @@
             <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
+            <h4>Visual memory decoding</h4>
+            <p class="text-muted">MRI</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -193,8 +193,8 @@
             <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
+            <h4>Training Optimisation</h4>
+            <p class="text-muted">2 years of data</p>
           </div>
         </div>
       </div>
@@ -207,7 +207,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Timeline, from finish to start.</h3>
+          <h3 class="section-subheading text-muted">Timeline, from present to 2012.</h3>
         </div>
       </div>
       <div class="row">
