--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-head-side-brain fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-head-side-brain"></i>
           </span>
           <h4 class="service-heading">Understanding thoughts and actions</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">At every moment in time, an abundance of information hits our retina. How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour? .</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
