--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <i class="fas fa-head-side-brain"></i>
           </span>
           <h4 class="service-heading">Understanding thoughts and actions</h4>
-          <p class="text-muted">At every moment in time, an abundance of information hits our retina. How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour? .</p>
+          <p class="text-muted">At every moment in time, an abundance of information hits our retina. How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour? </p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
