add files and changes theme text

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Jasper Hajonides van der Meulen</div>
-        <div class="intro-heading text-uppercase">Personal Website</div>
+        <div class="intro-heading text-uppercase"> </div>
+        <div class="intro-lead-in">Data Scientist; PhD student at Oxford University</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">See More</a>
       </div>
     </div>
@@ -78,15 +78,15 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-head-side-brain"></i>
+            <i class="fad fa-chart-scatter"></i>
           </span>
-          <h4 class="service-heading">Understanding thoughts and actions</h4>
-          <p class="text-muted">At every moment in time, an abundance of information hits our retina. How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour? </p>
+          <h4 class="service-heading">Predicting Neural Time Series</h4>
+          <p class="text-muted"> Neural data recorded in humans or animals is inherently noisy. This poses challenges in modelling time series accurately.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-mind-share fa-stack-1x fa-inverse"></i>
+            <i class="fad fa-mind-share fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Rhythms of the brain</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -96,8 +96,8 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-brain fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Memory decoding</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <h4 class="service-heading">Understanding Thoughts and Actions</h4>
+          <p class="text-muted">At every moment in time, an abundance of information hits our retina. How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour?</p>
         </div>
       </div>
     </div>
@@ -395,14 +395,13 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Parametric feature decoding</h2>
+                <p class="item-intro text-muted">Using scalp recordings.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>Human scalp electroencephalography (EEG) is sensitive to electrical activity inside the brain, and it thought to reflect the synchronous activity of vast populations of pyramidal neurons, providing a masco-scopic view on brain activity. Recently, studies have shown that the information across an array of electrodes can be used in multivariate analyses to decode spatially overlapping neural information such as stimulus orientation, spatial location, spatial frequency, and motion direction (Stokes et al. 2015 TiCS ; King & Dehaene, 2014 TiCS; Sandhaeger et al. 2019 elife; Wolff et al. 2015 front syst neurosci; Foster et al. 2017 curr biol).</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Threads</li>
-                  <li>Category: Illustration</li>
+                  <li>Date: November 2019</li>
+                  <li>PhD project</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
