--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fad fa-chart-scatter"></i>
+            <i class="fas fa-chart-scatter"></i>
           </span>
           <h4 class="service-heading">Predicting Neural Time Series</h4>
           <p class="text-muted"> Neural data recorded in humans or animals is inherently noisy. This poses challenges in modelling time series accurately.</p>
@@ -179,8 +179,8 @@
             <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Visual memory decoding</h4>
-            <p class="text-muted">MRI</p>
+            <h4>Multivariate Pattern Analyses: Expectations and Working Memory</h4>
+            <p class="text-muted">fMRI</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -265,7 +265,7 @@
                   <h4>Sep 2014 - Aug 2015</h4>
                   <h4> Oxford University</h4>
                   <p><em> Undergraduate internship </em></p>
-                </div>
+                </div>w
                 <div class="timeline-body">
                   <p class="text-muted">In collaboration with Dr. Robert Mok and Prof. Kia Nobre, I worked on a behavioural and eye-tracking study investigating emotional working memory in younger and older adults.</p>
                 </div>
@@ -396,11 +396,12 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Parametric feature decoding</h2>
-                <p class="item-intro text-muted">Using scalp recordings.</p>
+                <p class="item-intro text-muted">Using EEG scalp recordings.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                 <p>Human scalp electroencephalography (EEG) is sensitive to electrical activity inside the brain, and it thought to reflect the synchronous activity of vast populations of pyramidal neurons, providing a masco-scopic view on brain activity. Recently, studies have shown that the information across an array of electrodes can be used in multivariate analyses to decode spatially overlapping neural information such as stimulus orientation, spatial location, spatial frequency, and motion direction (Stokes et al. 2015 TiCS ; King & Dehaene, 2014 TiCS; Sandhaeger et al. 2019 elife; Wolff et al. 2015 front syst neurosci; Foster et al. 2017 curr biol).</p>
                 <ul class="list-inline">
                   <li>Date: November 2019</li>
+                  <li>Oxford University, UK</li>
                   <li>PhD project</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
@@ -462,14 +463,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Perceptual Manifolds</h2>
+                <p class="item-intro text-muted">Review .</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>After we are presented with the visual image of an object, a cascade of neural computations allows the observer to recognise and identify the object. Still much remains unknown about the coding mechanisms through which the visual system solves object recognition. Recent neurocomputational theories describe how intrinsic manifolds, defined by population activity at different stages of the visual hierarchy, allow for fine grained perceptual discriminations. The current aim is to suggest how 1) intrinsic manifolds develop through perceptual learning, 2) transformations between manifold respresentations between visual areas can inform us about perception and 3) recurrent connections between cortical areas influence the navigation through the neural space.</p>
                 <ul class="list-inline">
                   <li>Date: January 2017</li>
-                  <li>Client: Finish</li>
-                  <li>Category: Identity</li>
+                  <li>Princeton University, USA</li>
+                  <li>MSc project</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -530,14 +531,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Multivariate Pattern Analysis: Expectations and Working Memory</h2>
+                <p class="item-intro text-muted">functional MRI.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>Previous studies have indicated that the early visual cortex plays a functional role in maintaining sensory information in working memory. We hypothesised that delay-related activity patterns represent top-down perceptual predictions rather than a sensory representation of working memory. We applied MVPA to decode, from multiband fMRI data (TR = 680 ms), the perceptual representation of working memory and perceptual expectations in the early visual cortex. In experiment 1, participants (N = 15) performed a working-memory task with a predictable distractor at the end of the maintenance period. We showed that sensory representations in the early visual cortex during the working memory maintenance period represent working memory and not expectation. Interestingly, we found a suppression of the expected distractor early in the trial. In experiment 2, only on half of the trials participants (N = 16) had to remember one of the presented stimuli. The representation of the expected distractor remained suppressed throughout the maintenance period on trials without WM. Suppression of the distractor representation was also observed prior to trial onset. We conclude that the delay-related activity patterns in the early visual cortex code for working memory and not expectation. Potentially, suppression of the expected distractor acts as an adaptive process to prevent interference of the distractor with the working memory representation.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Southwest</li>
-                  <li>Category: Website Design</li>
+                  <li>Date: Jan 2016 - Nov 2016</li>
+                  <li>Donders Institute for Cognitive Neuroimaging, NL</li>
+                  <li>MSc project</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
