--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Themes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">CV</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -103,12 +103,12 @@
     </div>
   </section>
 
-  <!-- CV themes Grid -->
+  <!-- Projects themes Grid -->
   <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">CV</h2>
+          <h2 class="section-heading text-uppercase">Projects</h2>
           <h3 class="section-subheading text-muted">Overview of projects.</h3>
         </div>
       </div>
