--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="far fa-chart-bar"></i>
+            <i class="far fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Predicting Neural Time Series</h4>
           <p class="text-muted"> Neural data recorded in humans or animals is inherently noisy. This poses challenges in modelling time series accurately.</p>
