--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="far fa-chart-bar fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Predicting Neural Time Series</h4>
           <p class="text-muted"> Neural data recorded in humans or animals is inherently noisy. This poses challenges in modelling time series accurately.</p>
@@ -86,7 +86,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fad fa-mind-share fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-mind-share fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Rhythms of the brain</h4>
           <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -219,7 +219,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2017-2020</h4>
+                  <h4>2017-2021</h4>
                   <h4 class="subheading">PhD at Oxford University</h4>
                 </div>
                 <div class="timeline-body">
@@ -279,7 +279,6 @@
                 <div class="timeline-heading">
                   <h4>Sep 2012 - Aug 2015</h4>
                   <h4 class="subheading">BSc at University of Amsterdam</h4>
-
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">After finishing high school I pursued a degree in Psychobiology at the University of Amsterdam. This research-oriented programme taught courses on neurobiology, neuropharmacalogy, statistics, cognitive psychology, social cognition, and more. I completed an excellence programme and finished all taught courses in two years and moved to Oxford for an internship during my third year </p>
