--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Emotional Working Memory</h4>
-            <p class="text-muted">Behavioural study</p>
+            <h4>Rhythms of perception</h4>
+            <p class="text-muted">fMRI study</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -180,7 +180,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Multivariate Pattern Analyses: Expectations and Working Memory</h4>
-            <p class="text-muted">fMRI</p>
+            <p class="text-muted">fMRI study</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -496,14 +496,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Rhythms of perception</h2>
+                <p class="item-intro text-muted">fMRI study.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Lines</li>
-                  <li>Category: Branding</li>
+                  <li>Date: November 2016 - August 2017</li>
+                  <li>Princeton University, USA</li>
+                  <li>MSc research project</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
