--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                   <h4>Sep 2014 - Aug 2015</h4>
                   <h4> Oxford University</h4>
                   <p><em> Undergraduate internship </em></p>
-                </div>w
+                </div>
                 <div class="timeline-body">
                   <p class="text-muted">In collaboration with Dr. Robert Mok and Prof. Kia Nobre, I worked on a behavioural and eye-tracking study investigating emotional working memory in younger and older adults.</p>
                 </div>
