--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading text-uppercase"> </div>
-        <div class="intro-lead-in">Data Scientist; PhD student at Oxford University</div>
+        <div class="intro-heading text-uppercase">Jasper Hajonides</div>
+        <div class="intro-lead-in"> </div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">See More</a>
       </div>
     </div>
