--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Predicting Neural Time Series</h4>
-          <p class="text-muted"> Neural data recorded in humans or animals is inherently noisy. This poses challenges in modelling time series accurately.</p>
+          <p class="text-muted"> Neural data recorded in humans or animals is inherently noisy. This poses challenges in decoding information and modelling time series accurately.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -89,7 +89,7 @@
             <i class="fas fa-wave-square fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Rhythms of the brain</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          <p class="text-muted">Information is conveyed at a range of time scales. By analysing the oscillation frequency of time signal, we learn more about how information is conveyed in the brain.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -109,7 +109,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Projects</h2>
-          <h3 class="section-subheading text-muted">Overview of projects.</h3>
+          <h3 class="section-subheading text-muted">Overview of projects</h3>
         </div>
       </div>
       <div class="row">
@@ -166,7 +166,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Rhythms of perception</h4>
-            <p class="text-muted">fMRI study</p>
+            <p class="text-muted">functional MRI</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -180,7 +180,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Multivariate Pattern Analyses: Expectations and Working Memory</h4>
-            <p class="text-muted">fMRI study</p>
+            <p class="text-muted">functional MRI</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -194,7 +194,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Training Optimisation</h4>
-            <p class="text-muted">2 years of data</p>
+            <p class="text-muted">  </p>
           </div>
         </div>
       </div>
@@ -299,7 +299,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted"> Email at jasper.hajonidesvandermeulen[at]new.ox.ac.uk</h3>
         </div>
       </div>
       <div class="row">
@@ -343,7 +343,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Jasper Hajonides 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
