--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Predicting Neural Time Series</h4>
-          <p class="text-muted"> Neural data recorded in humans or animals is inherently noisy. This poses challenges in decoding information and modelling time series accurately.</p>
+          <p class="text-muted" align=”justify” > Neural data recorded in humans or animals is inherently noisy. This poses challenges in decoding information and modelling time series accurately.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
