Changes to research themes

--- a/index.html
+++ b/index.html
@@ -80,24 +80,24 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Predicting Neural Time Series</h4>
-          <p class="text-muted" align=”justify” > Neural data recorded in humans or animals is inherently noisy. This poses challenges in decoding information and modelling time series accurately.</p>
+          <h4 class="service-heading">Data Science</h4>
+          <p class="text-muted" align=”justify” > Writing data processing pipelines that allow for extraction of information of interest, analysis of relationship between variables, and visualisation.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-wave-square fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Rhythms of the brain</h4>
-          <p class="text-muted">Information is conveyed at a range of time scales. By analysing the oscillation frequency of time signal, we learn more about how information is conveyed in the brain.</p>
+          <h4 class="service-heading"> Rhythms of the brain </h4>
+          <p class="text-muted">   .</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-brain fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Understanding Thoughts and Actions</h4>
-          <p class="text-muted">At every moment in time, an abundance of information hits our retina. How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour?</p>
+          <h4 class="service-heading">Psychology and Neuroscience</h4>
+          <p class="text-muted"> How do we prioritise information that is relevant at the present moment? How do we plan actions to optimise behaviour?</p>
         </div>
       </div>
     </div>
