--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="Jasper Hajonides" content="">
 
   <title>Agency - Jasper Hajonides - Theme</title>
+
+  <!-- Custom styles for this template -->
+  <link href="css/agency.min.css" rel="stylesheet">
+
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
-  <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+
+
+  <!-- Custom text-over-image styles (https://www.solodev.com/blog/web-design/css-considerations-with-text-on-images.stml) -->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style_text_over_image.css">
+
 
 </head>
 
@@ -32,7 +39,7 @@
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Jasper Hajonides</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
+        <!-- Menu -->
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -54,6 +61,7 @@
     </div>
   </nav>
 
+
   <!-- Header -->
   <header class="masthead">
     <div class="container">
@@ -65,8 +73,12 @@
     </div>
   </header>
 
+
+
+
+
   <!-- Services -->
-  <section class="page-section" id="services">
+  <section class="page-section" id="services" >
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -81,7 +93,7 @@
             <i class="fas fa-chart-bar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Data Science</h4>
-          <p class="text-muted" align=”justify” > Writing data processing pipelines that allow for extraction of information of interest, analysis of relationship between variables, and visualisation.</p>
+          <p class="text-muted" > Writing data processing pipelines that allow for extraction of information of interest, analysis of relationship between variables, and visualisation.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -103,103 +115,146 @@
     </div>
   </section>
 
-  <!-- Projects themes Grid -->
-  <section class="bg-light page-section" id="portfolio">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Projects</h2>
-          <h3 class="section-subheading text-muted">Overview of projects</h3>
+
+
+    <!-- Projects themes Grid -->
+    <section class="bg-light page-section" id="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Projects</h2>
+            <h3 class="section-subheading text-muted">Overview of projects</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Parametric feature perception</h4>
+              <p class="text-muted">Electroencephalography</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Attention in memory</h4>
+              <p class="text-muted">Electroencephalography</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Perceptual manifolds</h4>
+              <p class="text-muted">Review</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Rhythms of perception</h4>
+              <p class="text-muted">functional MRI</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Multivariate Pattern Analyses: Expectations and Working Memory</h4>
+              <p class="text-muted">functional MRI</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Training Optimisation</h4>
+              <p class="text-muted">  </p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Parametric feature perception</h4>
-            <p class="text-muted">Electroencephalography</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Attention in memory</h4>
-            <p class="text-muted">Electroencephalography</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Perceptual manifolds</h4>
-            <p class="text-muted">Review</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Rhythms of perception</h4>
-            <p class="text-muted">functional MRI</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Multivariate Pattern Analyses: Expectations and Working Memory</h4>
-            <p class="text-muted">functional MRI</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Training Optimisation</h4>
-            <p class="text-muted">  </p>
+    </section>
+
+
+  <!-- Topic imgs -->
+  <section class="sectional sectional-1 text-left text-white">
+    <div class="container">
+      <div class="h-100p row">
+        <div class="col-lg-offset-2 col-md-6 col-lg-3 d-flex align-items-center">
+          <div class="hero-zindex mobile-box">
+            <h1 class="h2">Web Support from launch to orbit</h1>
+            <p class="h-subhead">Solodev mission control is standing by at every stage with 24/7 U.S. based support.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <section class="sectional sectional-2 text-left text-white">
+    <div class="container">
+      <div class="h-50p row">
+        <div class="col-md-6 col-lg-4 d-flex align-items-center bg-box">
+          <div class="hero-zindex">
+            <h1 class="h2">Web Support from launch to orbit</h1>
+            <p class="h-subhead">Solodev mission control is standing by at every stage with 24/7 U.S. based support.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="sectional sectional-3 text-left text-white">
+    <div class="container">
+      <div class="h-50p row">
+        <div class="col-md-6 col-lg-4 d-flex align-items-center">
+          <div class="hero-zindex">
+            <h1 class="h2">Web Support from launch to orbit</h1>
+            <p class="h-subhead">Solodev mission control is standing by at every stage with 24/7 U.S. based support.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <!-- About -->
   <section class="page-section" id="about">
