content edit more soon

--- a/index.html
+++ b/index.html
@@ -125,229 +125,15 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Posts</h2>
-            <h3 class="section-subheading text-muted">Overview of projects</h3>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Parametric feature perception</h4>
-              <p class="text-muted">Electroencephalography</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Attention in memory</h4>
-              <p class="text-muted">Electroencephalography</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Perceptual manifolds</h4>
-              <p class="text-muted">Review</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Rhythms of perception</h4>
-              <p class="text-muted">functional MRI</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Multivariate Pattern Analyses: Expectations and Working Memory</h4>
-              <p class="text-muted">functional MRI</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Training Optimisation</h4>
-              <p class="text-muted">  </p>
-            </div>
+            <h2 class="section-heading text-uppercase">WORK IN PROGRESS</h2>
+            <h3 class="section-subheading text-muted">Content added soon</h3>
           </div>
         </div>
       </div>
-    </section>
-
-
-  <!-- Topic imgs -->
-  <section class="sectional sectional-1 text-left text-white">
-    <div class="container">
-      <div class="h-100p row">
-        <div class="col-lg-offset-2 col-md-6 col-lg-3 d-flex align-items-center">
-          <div class="hero-zindex mobile-box">
-            <h1 class="h2">Web Support from launch to orbit</h1>
-            <p class="h-subhead">Solodev mission control is standing by at every stage with 24/7 U.S. based support.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="sectional sectional-2 text-left text-white">
-    <div class="container">
-      <div class="h-50p row">
-        <div class="col-md-6 col-lg-4 d-flex align-items-center bg-box">
-          <div class="hero-zindex">
-            <h1 class="h2">Web Support from launch to orbit</h1>
-            <p class="h-subhead">Solodev mission control is standing by at every stage with 24/7 U.S. based support.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="sectional sectional-3 text-left text-white">
-    <div class="container">
-      <div class="h-50p row">
-        <div class="col-md-6 col-lg-4 d-flex align-items-center">
-          <div class="hero-zindex">
-            <h1 class="h2">Web Support from launch to orbit</h1>
-            <p class="h-subhead">Solodev mission control is standing by at every stage with 24/7 U.S. based support.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+      </section>
 
 
 
-  <!-- About -->
-  <section class="page-section" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Timeline, from present to 2012.</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="timeline">
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>2017-2021</h4>
-                  <h4 class="subheading">PhD at Oxford University</h4>
-                </div>
-                <div class="timeline-body">
-					        <p class="text-muted">Supervised by <a href="https://www.psy.ox.ac.uk/team/kia-nobre-1">Prof. Kia Nobre</a> and <a href="https://www.psy.ox.ac.uk/team/mark-stokes-1">Prof. Mark Stokes</a> my doctoral research investigates the role of top-down modulations on visual representations in the brain. </p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Nov 2016 - Aug 2017</h4>
-                  <h4 class="subheading">Visiting research scientist at Princeton University</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Working with Prof. Sabine Kastner I completed an MRI study investigating perception and attention in visual cortex and pulvinar.</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Jan 2016 - Nov 2016</h4>
-                  <h4>Donders Institute</h4>
-                  <p><em> Visiting research scientist </em></p>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">At the Donders Institute I worked with Prof. Floris de Lange to decode neural correlates of visual expectations and visual short-term memory using functional MRI with high temporal frequency. </p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Sep 2014 - Aug 2015</h4>
-                  <h4> Oxford University</h4>
-                  <p><em> Undergraduate internship </em></p>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">In collaboration with Dr. Robert Mok and Prof. Kia Nobre, I worked on a behavioural and eye-tracking study investigating emotional working memory in younger and older adults.</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/5.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Sep 2012 - Aug 2015</h4>
-                  <h4 class="subheading">BSc at University of Amsterdam</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">After finishing high school I pursued a degree in Psychobiology at the University of Amsterdam. This research-oriented programme taught courses on neurobiology, neuropharmacalogy, statistics, cognitive psychology, social cognition, and more. I completed an excellence programme and finished all taught courses in two years and moved to Oxford for an internship during my third year </p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
 
     <!-- About -->
     <section class="page-section" id="contact">
@@ -367,7 +153,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Jasper Hajonides 2019</span>
+          <span class="copyright">Copyright &copy; Jasper Hajonides 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
