--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="Jasper Hajonides" content="">
 
-  <title>Agency - Jasper Hajonides - Theme</title>
+  <title> Jasper Hajonides </title>
 
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
